# app-for-certification

./: .env  .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  src.0298381f.js  src.0298381f.js.map  src.02faf636.js  src.02faf636.js.map  src.0d1e096e.js  src.0d1e096e.js.map  src.117ab56b.js  src.117ab56b.js.map  src.12044184.js  src.12044184.js.map  src.13ab35e9.js  src.13ab35e9.js.map  src.1e2a9df0.js  src.1e2a9df0.js.map  src.20d2cdea.js  src.20d2cdea.js.map  src.21342c0d.js  src.21342c0d.js.map  src.26157b76.js  src.26157b76.js.map  src.26a3a959.js  src.26a3a959.js.map  src.26df6e22.js  src.26df6e22.js.map  src.2b0b2aee.css  src.2b0b2aee.css.map  src.310bcdd3.js  src.310bcdd3.js.map  src.3750048f.js  src.3750048f.js.map  src.3bc0f947.js  src.3bc0f947.js.map  src.414145b4.js  (+89 more)
contract/: Cargo.toml  README.md
contract/src/: approval.rs  chemistry.rs  enumeration.rs  internal.rs  lib.rs  metadata.rs  mint.rs  nft_core.rs  royalty.rs  source.rs
contract/src/subjects/: chemistry.rs  microbiology.rs  physic.rs  sociology.rs  subjects_struct.rs
src/: App.js  config.js  global.css  index.html  index.js  utils.js
src/components/: Article.js  Content.js  FormForAnswer.js  IntroContent.js  IntroContent.module.css  NFTItem.js  Notification.js  QuestionItem.module.css  QuestionItems.js  Result.js  ResultItem.js  SourceQ.js
src/pages/: Certificate.js  Certificate.module.css  Chemistry.js  Home.js  Microbiology.js  NFTCollections.js  Physic.js  Results.js  Sociology.js
src/store/: ArticleProvider.js  article-context.js
(+14 files in other folders)
